# pfsshell

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Defs.mak  Makefile  README.md  dokany.sh  hl.c  hl.h  host_adapter.c  iomanX_port.h  iomanx_adapter.c  meson.build  meson_options.txt  pfs2tar.c  run_test.tcl  shell.c  shell.h  startup.c  util.c  util.h
.github/workflows/: ci.yml
apa/: Makefile  _init.c  apa.c  cache.c  cache.h  hdd.c  hdd.h  hdd_fio.c  hdd_fio.h  helper.h  irx_imports.h  journal.c  journal.h  misc.c  misc.h
apa/include/: libapa.h
apa/irx/: apa-opt.h  hdd.c  hdd.h  hdd_fio.c  hdd_fio.h
apa/src/: apa.c  free.c  journal.c  misc.c  password.c
fake_sdk/: Makefile  atad.c  cdvdman.c  dbg.c  dbg.h  dev9.c  err.c  fake_win32.c  intrman.c  sysclib.c  sysmem.c  thsemap.c
fake_sdk/include/: atad.h  cdvdman.h  dev9.h  hdd-ioctl.h  intrman.h  iomanX.h  irx.h  loadcore.h  poweroff.h  sysclib.h  sysmem.h  thsemap.h  types.h
hdl_dump/: hio_probe.c  osal_unix.c
hdlfs/: Makefile  README.txt  Research.txt  hdlfs.h  imports.lst  irx_imports.h  main.c
iomanX/: Makefile  fake_iomanX.c  iomanX.c  irx_imports.h
pfs/: Makefile  _init.c  bitmap.c  block.c  cache.c  cache.h  dir.c  inode.c  journal.c  journal.h  misc.c  misc.h  pfs.c  pfs.h  pfs_fio.c  pfs_fio.h  pfs_fioctl.c  super.c
pfs/include/: libpfs.h
pfs/irx/: pfs-opt.h  pfs.c  pfs.h  pfs_fio.c  pfs_fio.h  pfs_fioctl.c
pfs/src/: bitmap.c  block.c  blockWrite.c  cache.c  dir.c  inode.c  journal.c  misc.c  super.c  superWrite.c
ps2sdk/common/include/: errno.h  list.h  tamtypes.h
ps2sdk/common/include/sys/: fcntl.h
ps2sdk/iop/dev9/atad/include/: atad.h
ps2sdk/iop/kernel/include/: cdvdman.h  ctype.h  defs.h  intrman.h  ioman.h  iomanX.h  loadcore.h  sysmem.h  thbase.h  thevent.h  thsemap.h  types.h
src/: hl.c  hl.h  iomanX_port.h  pfs2tar.c  pfsd.c  pfsd_client.c  pfsd_client.h  pfsd_common.h  pfslib_compat.c  pfslib_compat.h  ps2kinst.c  shell.c  startup.c
subprojects/: build.bat  build.sh
subprojects/apa/: CMakeLists.txt  _init.c  include  irx  meson.build  src
subprojects/apa/irx/: apa-opt.h  hdd.c  hdd_fio.c  hdd_fio.h
subprojects/apa/src/: apa.c  cache.c  free.c  journal.c  misc.c  password.c
subprojects/fakeps2sdk/: CMakeLists.txt  atad.c  meson.build  thsemap.c
subprojects/fakeps2sdk/include/: atad.h  dev9.h  hdd-ioctl.h  intrman.h  io_common.h  iomanX.h  iox_stat.h  irx.h  loadcore.h  sysclib.h  thbase.h  thsemap.h  types.h
subprojects/hdlfs/: CMakeLists.txt  README.txt  Research.txt  _init.c  hdlfs.h  main.c  meson.build
subprojects/iomanX/: CMakeLists.txt  include  meson.build  src
subprojects/pfs/: CMakeLists.txt  _init.c  include  irx  meson.build  src
subprojects/pfs/include/: libpfs.h
subprojects/pfs/irx/: pfs-opt.h  pfs.c  pfs.h  pfs_fio.c  pfs_fio.h  pfs_fioctl.c
subprojects/pfs/src/: bitmap.c  blockWrite.c  cache.c  dir.c  journal.c  misc.c  super.c  superWrite.c
test/: pfsshell_test.tcl
