
option(
	'enable_pfsfuse',
	type: 'boolean',
	value: false,
	description: 'Enable building of pfsfuse executable. Requires FUSE to be installed'
)

option(
	'enable_pfs2tar',
	type: 'boolean',
	value: false,
	description: 'Enable building of pfs2tar executable.'
)

option(
	'enable_pfsd',
	type: 'boolean',
	value: false,
	description: 'Enable building of pfsd executable. Requires SysV and Linux specific APIs.'
)

option(
	'enable_ps2kinst',
	type: 'boolean',
	value: false,
	description: 'Enable building of ps2kinst executable. Requires SysV and Linux specific APIs.'
)
